--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,11 +1,11 @@
-<form action="/signin" method="POST">
+<form action="/api/auth/signin" method="POST">
   <div>
-    <label for="email">Username:</label>
-    <input type="email" id="email" name="email" required>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Email" required>
   </div>
   <div>
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" placeholder="Password" required>
   </div>
   <button type="submit">Sign In</button>
 </form>
