--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,16 +2,16 @@
 
 <form action="/api/auth/signup" method="POST">
   <div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" name="name" placeholder="Full Name" required>
   </div>
   <div>
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" name="email" placeholder="Email" required>
   </div>
   <div>
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" placeholder="Password" required>
   </div>
   <button type="submit">Sign Up</button>
 </form>
